--- a/app/views/portfolis/index.html.erb
+++ b/app/views/portfolis/index.html.erb
@@ -8,4 +8,5 @@
   <p><%= portfoli_item.body %></p>
   <%= image_tag portfoli_item.thumb_image unless portfoli_item.thumb_image.nil? %>
   <%= link_to "Edit", edit_portfoli_path(portfoli_item) %>
+  <%= link_to "Delete Portfoli item", portfoli_path(portfoli_item), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
