--- a/app/views/portfolis/index.html.erb
+++ b/app/views/portfolis/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Create new Item", new_portfoli_path %>
 
 <% @portfoli_items.each do |portfoli_item| %>
-  <p><%= link_to portfoli_item.title, portfoli_path(portfoli_item) %></p>
+  <p><%= link_to portfoli_item.title, portfoli_show_path(portfoli_item) %></p>
   <p><%= portfoli_item.subtitle %></p>
   <p><%= portfoli_item.body %></p>
   <%= image_tag portfoli_item.thumb_image unless portfoli_item.thumb_image.nil? %>
