--- a/app/views/portfolis/angular.html.erb
+++ b/app/views/portfolis/angular.html.erb
@@ -1,12 +1,12 @@
 <h1>Angular Portfolio items</h1>
 
-<%= link_to "Create new Item", new_portfoli_path %>
+<%= link_to "Create new Item", new_portfoli_path if logged_in?(:site_admin) %>
 
 <% @angular_portfolio_items.each do |portfoli_item| %>
   <p><%= link_to portfoli_item.title, portfoli_show_path(portfoli_item) %></p>
   <p><%= portfoli_item.subtitle %></p>
   <p><%= portfoli_item.body %></p>
   <%= image_tag portfoli_item.thumb_image unless portfoli_item.thumb_image.nil? %>
-  <%= link_to "Edit", edit_portfoli_path(portfoli_item) %>
-  <%= link_to "Delete Portfoli item", portfoli_path(portfoli_item), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to "Edit", edit_portfoli_path(portfoli_item) if logged_in?(:site_admin) %>
+  <%= link_to "Delete Portfoli item", portfoli_path(portfoli_item), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
 <% end %>
