--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,23 +14,18 @@
   </head>
 
   <body>
-    <div class="site-wrapper">
-      <div class="site-wrapper-inner">
-        <div class="cover-container">
+
           <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
 
             <%= render 'shared/application_nav' %>
 
-            <%= login_helper %>
 
             <%= yield %>
 
-            <%= @copyright %>
+            <%= render 'shared/application_footer' %>
 
             <%= source_helper("application") %>  
-          </div>
-        </div>
-      </div>
+ 
     </div>
   </body>
 </html>
