--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -2,10 +2,12 @@
   <div class="inner">
     <h3 class="masthead-brand">Charli B</h3>
     <nav class="nav nav-masthead justify-content-center">
+      <%= link_to "Home", root_path, class: 'nav-link' %>
       <%= link_to "About", about_path, class: 'nav-link' %>
       <%= link_to "Contact", contact_path, class: 'nav-link' %>
       <%= link_to "Blog", blogs_path, class: 'nav-link' %>
       <%= link_to "Portolios", portfolis_path, class: 'nav-link' %>
+      <%= login_helper 'nav-link' %>
     </nav>
   </div>
 </header>
