--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,3 +113,15 @@ body {
   color: rgba(255, 255, 255, .5);
 }
 
+
+/*
+ * Custom styles
+ */
+
+.card-body {
+  color: black;
+}
+
+.auth-links a {
+  color: black;
+}
