--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,18 +15,14 @@
 
   <body>
     <div class="container">
-      
+
       <%= render 'shared/blog_nav' %>
+      <%= render 'shared/blog_masthead' %>
 
       <%= yield %>
 
       <%= render 'shared/blog_sidebar' %>
-      <footer class="blog-footer">
-        <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        <p>
-          <a href="#">Back to top</a>
-        </p>
-      </footer> 
+      <%= render 'shared/blog_footer' %>
 
       <%= source_helper("blog") %>
     </div><!-- end of container -->
