updated form styles for portfolios

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -16,7 +16,7 @@
 
     <%= render 'shared/portfoli_nav' %>
     
-    <%= render 'shared/portfoli_masthead' %>
+    <%= render 'shared/portfoli_masthead' unless logged_in?(:site_admin) %>
 
     <%= yield %>
 
