--- a/app/views/portfolis/edit.html.erb
+++ b/app/views/portfolis/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit this Portofli item</h1>
+<div class="container portfoli-form">
+  <h1>Edit this Portofli item</h1>
 
-<%= render 'form', portfoli_item: @portfoli_item %>
+  <%= render 'form', portfoli_item: @portfoli_item %>
+</div>
