Implemented refactor for navigation and active statuses

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,3 +134,10 @@ body {
   margin: 0 auto;
   float: none;
 }
+
+.nav .nav-masthead {
+  span {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
