--- a/app/views/portfolis/index.html.erb
+++ b/app/views/portfolis/index.html.erb
@@ -1,10 +1,7 @@
 <div class="album py-5 bg-light">
   <div class="container">
-
-    <div class="row">
-
+    <div class="row sortable">
       <%= render partial: 'portfoli_item', collection: @portfoli_items %>
-
     </div>
   </div> 
 </div>
