--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,18 @@
 <h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+
+    <%= image_tag "https://miro.medium.com/fit/c/240/240/0*pdYYjTZAMiDnzJyC." width: 300 %>
+  </div>
+
+  <div class="col-md-8">
+    <p>Find me in app/views/pages/about.html.erb</p>
+    <p>Find me in app/views/pages/about.html.erb</p>
+    <p>Find me in app/views/pages/about.html.erb</p>
+    <p>Find me in app/views/pages/about.html.erb</p>
+  </div>
+</div>
+
