--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-md-4">
 
-    <%= image_tag "https://miro.medium.com/fit/c/240/240/0*pdYYjTZAMiDnzJyC." width: 300 %>
+    <%= image_tag "https://miro.medium.com/fit/c/240/240/0*pdYYjTZAMiDnzJyC.", width: 300 %>
   </div>
 
   <div class="col-md-8">
