--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,16 @@
   <body>
 
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-      
-      <div id="background"></div>
+
+        <%= video_tag(
+          'HardDrivePhotojpeg.mp4',
+          id: 'background',
+          autoplay: true,
+          loop: true,
+          muted: true,
+          poster: 'ny.jpeg'
+        )
+        %>
 
       <%= render 'shared/application_nav' %>
 
