Implemented initial file uploading system via carrierwave or portfolio items

--- a/app/views/portfolis/new.html.erb
+++ b/app/views/portfolis/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container portfoli-form">
+<div class="container portfoli-container">
   <h1>Create a new Portofli item</h1>
 
   <%= render 'form', portfoli_item: @portfoli_item %>
