--- a/app/views/portfolis/edit.html.erb
+++ b/app/views/portfolis/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container portfoli-form">
+<div class="container portfoli-container">
   <h1>Edit this Portofli item</h1>
 
   <%= render 'form', portfoli_item: @portfoli_item %>
