--- a/app/views/portfolis/show.html.erb
+++ b/app/views/portfolis/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container portolio-container">
   <div class="row">
     <div class="col-md-7">
-      <%= image_tag @portfoli_item.main_image %>
+      <%= image_tag @portfoli_item.main_image, width: '100%' %>
     </div>
     <div class="col-md-5">
       <h1><%= @portfoli_item.title %></h1>
