--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -26,6 +26,8 @@
           <%= render 'shared/blog_sidebar' %>
           <%= render 'shared/blog_footer' %>
 
+          <%= alerts %>
+
           <%= source_helper("blog") %>
         </div><!-- end of row -->
       </main>
