--- a/app/views/portfolis/_form.html.erb
+++ b/app/views/portfolis/_form.html.erb
@@ -2,7 +2,7 @@
 
   <% if portfoli_item.errors.any? %>
     <% portfoli_item.errors.full_messages.each do |error| %>
-      <%= js add_gritter(error, title: "Charli", sticky: false) %>
+      <%= alert_generator(error) %>
     <% end %>
   <% end %>
 
