--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -14,6 +14,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :topic_id %>
+    <%= f.collection_select :topic_id, Topic.order(:title),:id,:title, include_blank: true %>
+  </div>
+
+  <div class="form-group">
     <%= f.submit "Submit" ,class: "btn btn-primary" %>
   </div>
 <% end %>
