--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -5,6 +5,19 @@
   <p>
     <%= @blog.topic.title %>
   </p>
+
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><%= link_to "Home", root_path %></li>
+      <li class="breadcrumb-item"><%= link_to @blog.topic.title, topic_path(@blog.topic) %></li>
+      <li class="breadcrumb-item active" aria-current="page"><%= @blog.title %></li>
+      <li class="pull-right">
+        <%= link_to fa_icon('pencil-square-o'), edit_blog_path(@blog) if logged_in?(:site_admin) %>
+        <%= link_to fa_icon('trash'), @blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+      </li>
+    </ol>
+  </nav>
+
   <p>
     <%= markdown @blog.body %>
   </p>
