--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,18 +1,10 @@
-<h1>Pages#about</h1>
-
-<hr>
-
-<div class="row">
-  <div class="col-md-4">
-
-    <%= image_tag "https://miro.medium.com/fit/c/240/240/0*pdYYjTZAMiDnzJyC.", width: 300 %>
-  </div>
-
-  <div class="col-md-8">
-    <p>Find me in app/views/pages/about.html.erb</p>
-    <p>Find me in app/views/pages/about.html.erb</p>
-    <p>Find me in app/views/pages/about.html.erb</p>
-    <p>Find me in app/views/pages/about.html.erb</p>
-  </div>
+<div class="app-card-container">
+  <div class="card">
+    <%= image_tag "https://miro.medium.com/fit/c/240/240/0*pdYYjTZAMiDnzJyC.", width: "100%" %>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div> 
 </div>
-
