--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,5 +6,56 @@
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
+      <p>
+        <button
+         class="btn btn-primary" 
+         type="button" 
+         data-toggle="collapse" 
+         data-target="#jobHistory" 
+         aria-expanded="false" 
+         aria-controler="jobHistory">
+            Job History
+        </button>
+      </p>
+
+      <p>
+        <div class="collapse" id="jobHistory">
+          <div class="card card-block">
+            Jobs
+          </div>
+          <div class="card card-block">
+            Qweqeq
+          </div>
+          <div class="card card-block">
+            asdasda
+          </div>
+        </div>
+      </p>
+
+      <p>
+        <button
+         class="btn btn-primary" 
+         type="button" 
+         data-toggle="collapse" 
+         data-target="#education" 
+         aria-expanded="false" 
+         aria-controler="education">
+            Education
+        </button>
+      </p>
+
+      <p>
+        <div class="collapse" id="education">
+          <div class="card card-block">
+            School 1
+          </div>
+          <div class="card card-block">
+            School 2
+          </div>
+          <div class="card card-block">
+            School 3
+          </div>
+        </div>
+      </p>
   </div> 
 </div>
