--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,17 @@
 <div class="app-card-container">
   <div class="card">
     <%= image_tag "https://miro.medium.com/fit/c/240/240/0*pdYYjTZAMiDnzJyC.", width: "100%" %>
+
+    <div class="skills">
+      <% @skills.each do |skill| %>
+        <h4><%= skill.title %></h4>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" aria-valuenow="<%= skill.percent_utilized %>" aria-valuemax="100" style="width: <%= skill.percent_utilized %>%">
+            
+          </div>
+        </div>
+      <% end %>
+    </div>
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
